# PyScry

./: .gitignore  README.md  cspell.config.yaml  pyproject.toml
src/pyscry/: __init__.py  __main__.py  cli.py  pyscry.py
tests/: test_process_files.py
