[project]
name = "pyscry"
version = "1.0.0"
description = "PyScry analyzes your codebase and uncovers the exact Python packages behind every import."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pyscry = "pyscry.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyscry"]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff", "pyright"]


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "ANN",
    "RET",
    "RUF",
    "A",
    "PTH",
]
