[project]
name = "pyscry"
version = "1.0.0"
description = "PyScry analyzes your codebase and uncovers the exact Python packages behind every import."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pyscry = "pyscry.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyscry"]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.15.2", "pyright>=1.1.408"]

[tool.ruff]
line-length = 110
target-version = "py312"
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "ANN",
    "RET",
    "RUF",
    "A",
    "PTH",
]
